# gardenlife

./: .gitignore  README.rst  pyproject.toml
gardenlife/: accent.py  constants.py  creature.py  event_funcs.py  garden.py  manage.py  organism.py  organisms.py  plant.py  popups.py  status.py  subwindows.py  summary_funcs.py  tab_funcs.py  task.py
tests/: context.py  test_creature.py  test_garden.py  test_gardenlife.py  test_plant.py  test_task.py
