[tool.poetry]
name = "gardenlife"
version = "0.1.0"
description = "A garden management app"
authors = ["jonboland <jon.boland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.1"
pysimplegui = "^4.34.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
